# emoji-sniper

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  allowed.txt  banned.txt  has-emojis.md  idea.md  main.py  pyproject.toml  subs.json
doc/: ARCHITECTURE.md  EMOJI-RANGES.md
emoji_sniper/core/: __init__.py  core.py  substitute.py  substitution_map.py
emoji_sniper/utils/: __init__.py
scanner/: banned_parser.py  core.py  output.py  substitute.py
src/emoji_sniper/: main.py
src/emoji_sniper/core/: allowed_parser.py
src/emoji_sniper/utils/: logging_setup.py
tests/: test_allowed.py  test_banned_parser.py  test_cli.py  test_file_discovery.py  test_scanner.py  test_substitute.py
utils/: file_discovery.py  logging_setup.py
