[project]
name = "emoji-sniper"
version = "0.1.0"
description = "Emoji/Banned character sniper CLI for Obsidian vaults"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [{ name = "Contributors" }]
dependencies = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.5.0",
  "black>=24.0",
  "mypy>=1.8.0",
]

[project.scripts]
emoji-sniper = "main:main"

 

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","UP","B","S"]
ignore = []

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main"]
packages = ["scanner", "utils"]
