[project]
name = "emoji-sniper"
version = "0.1.0"
description = "Emoji/Banned character sniper CLI for Obsidian vaults"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [{ name = "Contributors" }]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]
dev = [
    "ruff>=0.6.0",
    "black>=24.0",
    "mypy>=1.9.0",
]

[project.scripts]
emoji-sniper = "emoji_sniper.main:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["emoji_sniper", "emoji_sniper.core", "emoji_sniper.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
